--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-ts-module",
   "version": "1.0.0",
   "main": "./dist/index.cjs",
+  "type": "module",
   "exports": {
     "import": "./dist/index.mjs",
     "require": "./dist/index.cjs"
