--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
+    "declaration": true,
+    "module": "ES6",
     "target": "ES2020",
     "moduleResolution": "Node",
     "outDir": "./dist",
