--- a/package.json
+++ b/package.json
@@ -9,13 +9,23 @@
   },
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "test": "node test/common.cjs; node test/es6.mjs"
+    "test": "node test/common.cjs; node test/es6.mjs",
+    "clean": "rm -rf *.log */*.log */out node_modules vscode-client/node_modules server/node_modules",
+    "compile": "tsc -b",
+    "watch": "tsc -b -w"
   },
   "devDependencies": {
-    "@types/node": "^20.14.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^4.9.5"
+    "@types/node": "18.19.30",
+    "@typescript-eslint/eslint-plugin": "7.5.0",
+    "@typescript-eslint/parser": "7.5.0",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-jest": "27.9.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-simple-import-sort": "12.0.0",
+    "eslint-plugin-sort-class-members": "1.20.0",
+    "prettier": "2.8.8",
+    "typescript": "5.4.4"
   },
   "dependencies": {
     "chalk": "^5.3.0"
