--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "my-ts-module",
-  "version": "1.0.0",
-  "main": "./dist/index.cjs",
+  "version": "1.1.0",
+  "homepage": "https://github.com/tinnyterr/logmatic#readme",
+  "bugs": {
+    "url": "https://github.com/tinnyterr/logmatic/issues"
+  },
+  "license":"MPL-2.0",
+  "author": "Lewis McDonald <l.mcdonald@dmnet.uk> (https://e-z.bio/tinnyterr)",
+  "main": "./dist/index.js",
   "type": "module",
   "repository": {
     "type": "git",
