--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-ts-module",
-  "version": "1.1.0",
+  "name": "logmatic",
+  "version": "1.2.1",
   "homepage": "https://github.com/tinnyterr/logmatic#readme",
   "bugs": {
     "url": "https://github.com/tinnyterr/logmatic/issues"
