--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "logmatic",
-    "version": "1.2.2-pre1",
+    "version": "1.4",
     "homepage": "https://github.com/tinnyterr/logmatic#readme",
     "bugs": {
         "url": "https://github.com/tinnyterr/logmatic/issues"
