--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "compile": "npm run pretest"
     },
     "devDependencies": {
+        "@types/lodash": "^4.17.13",
         "@types/node": "18.19.30",
         "@typescript-eslint/eslint-plugin": "7.5.0",
         "@typescript-eslint/parser": "7.5.0",
@@ -37,7 +38,9 @@
         "typescript": "5.4.4"
     },
     "dependencies": {
+        "@biomejs/biome": "^1.9.4",
         "console-log-colors": "^0.5.0",
-        "json-colorizer": "^3.0.1"
+        "json-colorizer": "^3.0.1",
+        "lodash": "^4.17.21"
     }
 }
