--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,11 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "module": "ES6",
-    "target": "ES2020",
-    "moduleResolution": "Node",
-    "outDir": "./dist",
-    "strict": true,
+    "emitDeclarationOnly": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
+    "sourceMap": true,
+    "outDir": "dist",
+    "rootDir": "src"
   },
   "include": ["src/*"],
   "exclude": ["node_modules", "dist"]
