make types.ts to a type declaration update biome to include Level as global variable
Signed-off-by: TinnyTerr <168141209+TinnyTerr@users.noreply.github.com>

--- a/biome.json
+++ b/biome.json
@@ -98,6 +98,6 @@
             "lineEnding": "lf",
             "indentWidth": 4
         },
-        "globals": []
+        "globals": ["Level"]
     }
 }
