--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     },
     "dependencies": {
         "@biomejs/biome": "^1.9.4",
+        "axios": "^1.7.8",
         "console-log-colors": "^0.5.0",
         "json-colorizer": "^3.0.1",
         "lodash": "^4.17.21",
