--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "main": "./dist/index.js",
     "repository": {
         "type": "git",
-        "url": "https://github.com/tinnyterr/logmatic.git"
+        "url": "git+https://github.com/tinnyterr/logmatic.git"
     },
     "exports": {
         "import": "./dist/index.mjs",
