--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "logmatic",
-    "version": "2.1",
+    "name": "@tinnyterr/logmatic",
+    "version": "2.1.0",
     "homepage": "https://github.com/tinnyterr/logmatic#readme",
     "bugs": {
         "url": "https://github.com/tinnyterr/logmatic/issues"
