--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "lint": "npx @biomejs/biome lint --write",
         "compile": "npx tsup --config tsup.config.ts --format cjs src/* && npx tsup --config tsup.config.ts --format esm src/*",
         "fullCompile": "rm -rf dist && npm run lint && npm run generateTypes && npm run compile",
-        "generateTypes": "npx tsc",
+        "generateTypes": "npx tsc && cp ./dist/index.d.ts ./dist/index.d.mts",
         "test": "npm run fullCompile && node tests/test.cjs && node tests/test.mjs"
     },
     "devDependencies": {
